added DataLoader utility target to ant build.xml file
git-svn-id: svn+ssh://svn.code.sf.net/p/bigdata/code/branches/DEV_BRANCH_27_OCT_2009@2371 8f7bc0f5-282e-0410-95e3-8d296e9bb460